force-app/main/default/objects/NU_Airport__c/fields/NU_Country_Code__c.field-meta.xml
<CustomField>
    <fullName>NU_Country_Code__c</fullName>
    <label>Country Code</label>
    <length>2</length>
    <type>Text</type>
</CustomField>