force-app/main/default/objects/NU_Airport__c/fields/NU_IATA_Code__c.field-meta.xml
<CustomField>
    <fullName>NU_IATA_Code__c</fullName>
    <label>IATA Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>