force-app/main/default/objects/NU_Airport__c/fields/NU_Location__c.field-meta.xml
<CustomField>
    <fullName>NU_Location__c</fullName>
    <label>Location</label>
    <scale>4</scale>
    <type>Location</type>
</CustomField>